# Pepper

./: .env.example  .gitignore  .mcp.json  .public-exclude  .swift-format  .swiftlint.yml  BUGS.md  CLAUDE.md  Makefile  Package.swift  README.md  ROADMAP.md  TASKS.md  TROUBLESHOOTING.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  ruff.toml  setup.sh  smithery.yaml
.claude/: settings.json
Pepper/: ContentView.swift  PepperApp.swift
Pepper.xcodeproj/: project.pbxproj
control/: CONTROL.md
docs/: AGENTIC-PLAN.md  ARCHITECTURE.md  COMMANDS.md  COMPETITIVE.md  DOCS.md  PR-STATE-MACHINE.md  RESEARCH.md  ROADMAP.md  SESSIONS.md  SETUP.md  TROUBLESHOOTING.md
dylib/: DYLIB.md
pepper_ios/: __init__.py  cli.py  common.py  ctl.py  dylib_fetch.py  mcp_build.py  mcp_crash.py  mcp_eval_compiler.py  mcp_prompts.py  mcp_screenshot.py  mcp_scripts.py  mcp_server.py  mcp_tools_accessibility.py  mcp_tools_app_automation.py  mcp_tools_app_debug.py  mcp_tools_app_perf.py  mcp_tools_app_swiftui.py  mcp_tools_biometric.py  mcp_tools_debug.py  mcp_tools_dialog.py  mcp_tools_element.py  mcp_tools_eval.py  mcp_tools_http.py  mcp_tools_issue.py  mcp_tools_nav.py  mcp_tools_net_tools.py  mcp_tools_network.py  mcp_tools_perf.py  mcp_tools_record.py  mcp_tools_renders.py  mcp_tools_script.py  mcp_tools_sim.py  mcp_tools_state.py  mcp_tools_state_tools.py  mcp_tools_sys_tools.py  mcp_tools_system.py  mcp_tools_ui_accessibility.py  mcp_tools_ui_query.py  pepper_ax.py  pepper_commands.py  (+11 more)
rules/: pepper.md
scripts/: SCRIPTS.md  agent-analyze.sh  agent-cleanup.sh  agent-crash-collector.sh  agent-dashboard.py  agent-heartbeat.sh  agent-kill.sh  agent-monitor.sh  agent-runner.sh  agent-trigger.sh  check-direct-element-lookup.sh  (+34 more)
(+492 files in other folders)
