[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pepper-ios"
version = "1.1.2"
description = "MCP server and CLI tools for Pepper iOS simulator control"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.26.0",
    "pyyaml>=6.0",
    "websockets>=12.0",
]

[project.scripts]
pepper-mcp = "pepper_ios.mcp_server:main"
pepper-ctl = "pepper_ios.ctl:main"
pepper-test = "pepper_ios.test_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["pepper_ios"]
